k8s/be-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdfunding-k8s
  # annotations:
  #   linkerd.io/inject: 'enabled'
spec:
  selector:
    matchLabels:
      app: crowdfunding-k8s
  replicas: 1
  template:
    metadata:
      labels:
        app: crowdfunding-k8s
    spec:
      containers:
        - name: crowdfunding-k8s
          image: jaytailor45/graphql-demo
          # ports:
          #   - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: crowdfunding-k8s
spec:
  selector:
    app: crowdfunding-k8s
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
