k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: backendingress
  labels:
    name: backendingress
spec:
  rules:
    - host: backend.com
      http:
        paths:
          - pathType: Prefix
            path: '/graphql'
            backend:
              service:
                name: crowdfunding-k8s
                port:
                  number: 3001
